Game, ExpertGame, Round tests finished